--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.freemarker.content-type=text/html; charset=utf-8
 spring.freemarker.template-loader-path=classpath:/templates
 spring.freemarker.cache=false
 spring.mvc.static-path-pattern=/static/**
+
+ssh.testhost=192.168.0.104
+ssh.port=22
+ssh.username=xiaomo
+ssh.password=wei123456
