--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<!-- websocket -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 		<!-- 基于JavaEE实现的webSocket接口 -->
 		<dependency>
 			<groupId>javax</groupId>
